--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,175 @@
-/* Font in design files is Raleway */
-
-/* background-image in Design 👇
- url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg'); */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+.navbar {
+  display: flex;
+  justify-content: center;
+  margin: 30px 30px;
+}
+.navbar .topNav {
+  margin: 30px 30px;
+}
+.navbar a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.4rem;
+  opacity: 80%;
+  padding: 5px;
+}
+.navbar .Home {
+  border-right: 1.5px solid grey;
+}
+.navbar .About {
+  border-right: 1.5px solid grey;
+}
+@media (max-width: 500px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px 0;
+    margin-bottom: 20px;
+  }
+  .navbar .Home,
+  .navbar .About {
+    border-right: none;
+  }
+}
+.title-container {
+  position: relative;
+  width: 100%;
+}
+.title-container .large {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  opacity: 80%;
+}
+.title-container .text {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 1.6rem;
+}
+.title-container .bottomtxt {
+  position: absolute;
+  top: 300px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 1.6rem;
+}
+.artists-container {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin-left: 200px;
+}
+.artists-container .artist {
+  width: 60%;
+}
+.artists-container .artist img {
+  width: 80%;
+  border-radius: 5px;
+}
+.artists-container .artist a {
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: #343131;
+}
+.artists-container .bio {
+  margin: 10px;
+  text-align: center;
+  font-size: 1.2rem;
+}
