--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,7 @@ video {
 .title-container {
   position: relative;
   width: 100%;
+  display: flex;
 }
 .title-container .large {
   display: block;
@@ -137,16 +138,19 @@ video {
   width: 100%;
   text-align: center;
   color: white;
-  font-size: 1.6rem;
+  font-size: 4.5rem;
+  font-weight: bold;
+  margin: 10px;
 }
 .title-container .bottomtxt {
   position: absolute;
-  top: 300px;
-  left: 0;
-  width: 100%;
+  top: 350px;
+  right: 820px;
+  width: 200px;
   text-align: center;
-  color: white;
+  color: black;
   font-size: 1.6rem;
+  margin: 20px;
 }
 .artists-container {
   display: flex;
@@ -166,7 +170,6 @@ video {
   display: flex;
   justify-content: center;
   text-decoration: none;
-  color: #343131;
 }
 .artists-container .bio {
   margin: 10px;
