--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,7 @@
 .title-container{
     position: relative; 
     width: 100%;
+    display: flex;
     .large {
         display: block;
         margin-left: auto;
@@ -8,6 +9,7 @@
         width: 50%;
         opacity: 80%;
     }
+
     .text {
         position: absolute; 
         top: 200px; 
@@ -15,16 +17,20 @@
         width: 100%; 
         text-align: center;
         color: white;
-        font-size:1.6rem;
+        font-size:4.5rem;
+        font-weight: bold;
+        margin: 10px;
     }
+
     .bottomtxt{
         position: absolute; 
-        top: 300px; 
-        left: 0; 
-        width: 100%; 
+        top: 350px; 
+        right: 820px;
+        width: 200px; 
         text-align: center;
-        color:white;
+        color:black;
         font-size:1.6rem;
+        margin:20px;
     }
 }
 
@@ -44,9 +50,6 @@
             display: flex;
             justify-content: center;
             text-decoration: none;
-            color: #343131;
-
-
             }
         }
         .bio {
