--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,5 @@
+
+
 .displayFlex(@justify){
     display: flex;
     justify-content: @justify;
@@ -6,3 +8,19 @@
 .navBar(){
     border-right: 1.5px solid grey;
 }
+
+
+.flex{
+    display: flex;
+        }
+.absolPos{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 45px;
+    }
+
+.buttonPad(@font,@color){
+    font-family: @font;
+    color: @color;
+} 
