--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,19 @@
 .navbar{
-    .displayFlex( center );
-    margin:30px 30px;
+    display:flex;
+    justify-content: center;
+    margin:25px 25px;
+
     .topNav {
         margin:30px 30px;
     }
     a {
         text-decoration: none;
         color:black;
-        font-size:1.4rem;
+        font-size:1.6rem;
         opacity: 80%;
-        padding: 5px;
+        padding: 10px;
+        font-weight: bold;
+        margin-left: 10px;
         
     }
     .Home {
