--- a/less/main.less
+++ b/less/main.less
@@ -1,60 +1,74 @@
-.title-container{
+.textBox{
     position: relative; 
-    width: 100%;
+    width: 80%;
     display: flex;
+    justify-content: center;
     .large {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-        opacity: 80%;
+        margin-left: 35%;
+        margin-right: 10%;
+        width: 60%;
+        opacity: 70%;
+        display: inline-block;
+        margin-bottom: 10px;
     }
-
-    .text {
-        position: absolute; 
-        top: 200px; 
-        left: 0; 
-        width: 100%; 
-        text-align: center;
+    p {
         color: white;
-        font-size:4.5rem;
+        font-size: 3.5rem;
         font-weight: bold;
-        margin: 10px;
+        text-align: center;
+        position: absolute;
+        display: inline-block;
+        margin-left: 12%;
+        margin-top: 8%;
     }
 
     .bottomtxt{
         position: absolute; 
-        top: 350px; 
-        right: 820px;
-        width: 200px; 
-        text-align: center;
         color:black;
         font-size:1.6rem;
-        margin:20px;
+        top: 60%;
+        font-size: 20px;
+        margin: 5px 12%;
     }
 }
 
-.artists-container {
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    margin-left: 200px;
-    .artist {
-        width: 60%;
-        img {
-            width: 80%;
-            border-radius: 5px;
+.artists-container{
+    .flex();
+    justify-content:  space-evenly;
+    flex-direction: row;
+  
+    .artPics{
+        width:150%;
+        height:50%;
+        border-radius: 10px;
+}
+
+        @media @mobile{
+            flex-direction: column;
+            justify-content:center;
+            align-items: center;
         }
-        a {
-            font-size: 1.6rem;
-            display: flex;
-            justify-content: center;
-            text-decoration: none;
-            }
-        }
-        .bio {
-            margin: 10px;
-            text-align: center;
-            font-size: 1.2rem;
-        }
+    }
+    .artist{
+
+        .flex();
+        justify-content: center;
+        flex-wrap:wrap;
+        width:325px;
+    }
+
+    .bio{
+    text-decoration: none;
+    color:@black;
+    font-size: 1.6rem;
+    }
+
+    p {
+        text-align: center;
+        padding:10px;
+    }
+
+    img:hover{opacity: 80%;} 
+    .bio:hover {
+        color:turquoise;
     }
