--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,4 @@
+
 .textBox{
     position: relative; 
     width: 80%;
@@ -7,7 +8,7 @@
         margin-left: 35%;
         margin-right: 10%;
         width: 60%;
-        opacity: 70%;
+        opacity: 80%;
         display: inline-block;
         margin-bottom: 10px;
     }
@@ -25,10 +26,17 @@
     .bottomtxt{
         position: absolute; 
         color:black;
-        font-size:1.6rem;
+        font-size:1rem;
+        padding: 15px;
+        border-radius: 5px;
         top: 60%;
-        font-size: 20px;
         margin: 5px 12%;
+        box-shadow: 3px 3px 1px @borderColor;
+    }
+}
+@media @mobile {
+    .textBox {
+        display: none;
     }
 }
 
@@ -47,10 +55,14 @@
             flex-direction: column;
             justify-content:center;
             align-items: center;
+            .artPics {
+                width: 100%;
+            }
         }
     }
+   
     .artist{
-
+     
         .flex();
         justify-content: center;
         flex-wrap:wrap;
@@ -59,7 +71,7 @@
 
     .bio{
     text-decoration: none;
-    color:@black;
+    color:black;
     font-size: 1.6rem;
     }
 
@@ -71,4 +83,10 @@
     img:hover{opacity: 80%;} 
     .bio:hover {
         color:turquoise;
-    }
+        }
+        @media @mobile {
+            .bio:hover {
+                color:coral;
+            }
+
+        }
