--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,18 +9,10 @@
     border-right: 1.5px solid grey;
 }
 
+.mobileNav(){
+    border-right: 0px;
+}
 
 .flex{
     display: flex;
         }
-.absolPos{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 45px;
-    }
-
-.buttonPad(@font,@color){
-    font-family: @font;
-    color: @color;
-} 
