--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,6 @@
 .flex {
   display: flex;
 }
-.absolPos {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 45px;
-}
 html,
 body,
 div,
@@ -103,7 +97,7 @@ video {
 .navbar .topNav {
   margin: 30px 30px;
 }
-.navbar a {
+.navbar .topNav a {
   text-decoration: none;
   color: black;
   font-size: 1.6rem;
@@ -112,22 +106,29 @@ video {
   font-weight: bold;
   margin-left: 10px;
 }
-.navbar .Home {
+.navbar .topNav .Home {
   border-right: 1.5px solid grey;
 }
-.navbar .About {
+.navbar .topNav .About {
   border-right: 1.5px solid grey;
 }
 @media (max-width: 500px) {
-  .navbar {
+  .topNav {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 20px 0;
-    margin-bottom: 20px;
   }
-  .navbar .Home,
-  .navbar .About {
-    border-right: none;
+  .topNav a {
+    border: 0.5px inset #88888;
+    background-color: lightgrey;
+    border-radius: 10px;
+    margin: 10px;
+    box-shadow: 5px 5px;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    background-color: oldlace;
   }
 }
 .textBox {
@@ -140,7 +141,7 @@ video {
   margin-left: 35%;
   margin-right: 10%;
   width: 60%;
-  opacity: 70%;
+  opacity: 80%;
   display: inline-block;
   margin-bottom: 10px;
 }
@@ -157,10 +158,17 @@ video {
 .textBox .bottomtxt {
   position: absolute;
   color: black;
-  font-size: 1.6rem;
+  font-size: 1rem;
+  padding: 15px;
+  border-radius: 5px;
   top: 60%;
-  font-size: 20px;
   margin: 5px 12%;
+  box-shadow: 3px 3px 1px #88888;
+}
+@media (max-width: 500px) {
+  .textBox {
+    display: none;
+  }
 }
 .artists-container {
   display: flex;
@@ -177,6 +185,9 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .artists-container .artPics {
+    width: 100%;
   }
 }
 .artist {
@@ -199,4 +210,9 @@ img:hover {
 }
 .bio:hover {
   color: turquoise;
+}
+@media (max-width: 500px) {
+  .bio:hover {
+    color: coral;
+  }
 }
