--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,16 +1,16 @@
 .navbar{
-    display:flex;
+  .flex();
     justify-content: center;
-    margin:25px 25px;
+    align-content: space-around;
+    margin:90px 30px;
     .topNav {
-        margin:30px 30px;
+ 
       a {
         text-decoration: none;
         color:black;
-        font-size:1.6rem;
+        font-size:1.2rem;
         opacity: 80%;
         padding: 10px;
-        font-weight: bold;
         margin-left: 10px;
       }
     .Home {
@@ -27,15 +27,16 @@
 
 @media @mobile {
     .topNav {
-    display: flex;
+    .flex();
     flex-direction: column;
-    align-items: center;
     a {
     border:.5px inset @borderColor;
     background-color: lightgrey;
     border-radius: 10px;
-    margin: 10px;
+    margin: 5px;
     box-shadow: 5px 5px;
+    padding: 30%;
+    text-align: center;
   }
  }
 }
